# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.50 2005/01/22 07:18:20 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  22 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed bug where end sector was set 1 too high causing the last partition
  to be 1 sector past the end of the drive.

  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added "Portage snapshot URI" field to PortageTree.py

  17 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added blurb about me being lazy to Welcome. Turned off pretend mode for
  gtkfe (no more training wheels!). Added mount point/opts fields to
  Partitioning.py. "fixed" invalid IP address problem in Networking.py

  17 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - changed from combobox to comboentrybox.  Redid some of the
  logic used to make the user experience better.
  Widgets.py - added an errorbox2 that has okay and cancel.

  16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  RunInstall.py called poll_notifications() in gtk idle loop and progress
  bar/status display work. Take ~5 fscking hours to figure out that pygtk
  is fscking retarted and locks its thread so python won't switch to
  another thread :(

  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
  USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
  and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES. New screen/code to actually
  run the install.

  15 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - added support for a custom ethernet device.
  Fixed a lot of little bugs having to do with user interaction,
  and added support for loading from the .xml file.
  Networking.py - added support for hostname and dnsdomainname.
