@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.50 2005/01/22 07:18:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.51 2005/01/23 00:10:24 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   22 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed bug where end sector was set 1 too high causing the last partition
-  to be 1 sector past the end of the drive.
+  to be 1 sector past the end of the drive. Added --pretend flag to gtkfe.py
+  that gets passed to GLIClientController
 
   19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added "Portage snapshot URI" field to PortageTree.py
